--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           </p>
         </section>
       </section>
+      <section>
+        <h1>Test</h1>
+        <p>
+          Herokuではアプリケーションをデプロイするには、Gitコマンドで可能です。
+          Herokuをリモートリポジトリとしてgit pushするだけで手軽にアプリケーションを公開することができます。
+        </p>
+      </section>
 
     </div>
 
