--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="panel">
           <h2>デプロイが簡単</h2>
           <p>
-            デプロイは基本的にgit push heroku masterでHerokuにpushするだけです。デプロイ作業に時間がかかって大変！ということはありません。
+            デプロイは基本的にHerokuにpushするだけです。デプロイ作業に時間がかかって大変！ということはありません。
           </p>
         </section>
         <section class="panel">
