コメントアウト

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <section id="about" class="site-width">
         <h1 class="title">ABOUT</h1>
         <p>WEBアプリケーションの開発から実行、運用までのすべてをクラウドで完結できるクラウドサービス。</p>
-        <p>クラウドサービスは大きくSaaS、PaaS、IaaSの3種類に分けられ、Herokuはこのうち、PaaS（Platform as a Service）に分類されます。</p>
-        <p>本来だったら自分でサーバやOS、DBなどを準備しなければならないが、Herokuにはそれらが全て揃っているので、手軽にアプリを公開することができます。</p>
+        <!-- <p>クラウドサービスは大きくSaaS、PaaS、IaaSの3種類に分けられ、Herokuはこのうち、PaaS（Platform as a Service）に分類されます。</p>
+        <p>本来だったら自分でサーバやOS、DBなどを準備しなければならないが、Herokuにはそれらが全て揃っているので、手軽にアプリを公開することができます。</p> -->
       </section>
 
       <section id="merit" class="site-width">
