--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p>WEBアプリケーションの開発から実行、運用までのすべてをクラウドで完結できるクラウドサービス。</p>
         <p>WEBアプリケーションの開発から実行、運用までのすべてをクラウドで完結できるクラウドサービス。</p>
         <p>WEBアプリケーションの開発から実行、運用までのすべてをクラウドで完結できるクラウドサービス。</p>
+        <p>WEBアプリケーションの開発から実行、運用までのすべてをクラウドで完結できるクラウドサービス。</p>
         <p>クラウドサービスは大きくSaaS、PaaS、IaaSの3種類に分けられ、Herokuはこのうち、PaaS（Platform as a Service）に分類されます。</p>
         <p>本来だったら自分でサーバやOS、DBなどを準備しなければならないが、Herokuにはそれらが全て揃っているので、手軽にアプリを公開することができます。</p>
       </section>
